# aac-launch

./: API_STABILITY.md  BENCH.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  build.zig  build.zig.zon
.github/workflows/: ci.yml
bench/: bench_parse.zig
bench/results/: 2026-05-15.out
bindings/python/: README.md  pyproject.toml
bindings/python/aac_launch/: __init__.py
bindings/python/tests/: test_parse.py
corpus/: freedesktop-exec-corpus.tsv
src/: main.zig
